solved too long title break things problem

--- a/src/App.scss
+++ b/src/App.scss
@@ -107,15 +107,13 @@ input[type="number"] {
   margin-top: 50px;
 }
 
-.EventList .event {
+.EventList .listItem {
   transition: .5s;
   &:hover:nth-child(even) {
-    z-index: 999;
-    box-shadow: 0 0 10px darken($lightGrey, 25%);
+    box-shadow: 5px 0 2px 5px lighten($bgColor, 50%);  
   }
   &:hover:nth-child(odd) {
-    z-index: 999;
-    box-shadow: 0 0 10px darken($lightGrey, 25%);
+    box-shadow: -5px 0 2px 5px lighten($bgColor, 50%);
   }
 }
 
@@ -125,8 +123,6 @@ input[type="number"] {
   text-align: left;
   position: relative;
   transition: .4s;
-  
-  min-height: 200px;
 }
 
 .name {
@@ -149,8 +145,12 @@ input[type="number"] {
 }
 
 .summary {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 35px;
   text-align: center;
+  min-height: 150px;
 }
 
 .date {
@@ -268,6 +268,7 @@ input[type="number"] {
   top: 0;
   width: 130%;
   height: 65px;
+  z-index: 999;
 }
 
 @media only screen and (min-width: 992px) {
